Rename vidas to copas in UI and game logic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Arge<span>noid</span></h1>
             <div id="stats">
                 <div class="stat-item">PUNTOS: <span id="score">0</span></div>
-                <div class="stat-item">VIDAS: <span id="lives">3</span></div>
+                <div class="stat-item">COPAS: <span id="lives">3</span></div>
             </div>
         </header>
 
